[package]
name = "pdb2fasta-wasm-rust"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
knuckles-parse = { version = "0.2.0", default-features = false }
phf = { version = "0.11.2", features=["macros"] }
wasm-bindgen = "0.2.95"
wee_alloc = "0.4.5"

[profile.release]
lto = true
opt-level = "s"

